Adding label and style in Progress

--- a/components/Progress/Progress.module.css
+++ b/components/Progress/Progress.module.css
@@ -20,6 +20,10 @@
     transition: .8s;
 }
 
+.description {
+    display: flex;
+    justify-content: space-between;
+}
 .container span {
     /* color: #555; */
     line-height: 2rem;
