Putting percentage on the right

--- a/components/Progress/Progress.module.css
+++ b/components/Progress/Progress.module.css
@@ -1,24 +1,15 @@
 .container {
     display: flex;
-    max-width: 500px;
+    max-width: 600px;
     min-width: 300px;
     width: 100%;
     flex-direction: column;
     position: relative;
-    padding-top: 2.8rem;
+    /* padding-top: 2.8rem; */
+    /* border: 1px solid white; */
 }
 
-.container b {
-    width: 50px;
-    margin-left: -25px;
-    left: 76%;
-    font-weight: bold;
-    font-size: x-large;
-    position: absolute;
-    top: 0;
-    text-align: center;
-    transition: .8s;
-}
+
 
 .description {
     display: flex;
@@ -28,20 +19,46 @@
     /* color: #555; */
     line-height: 2rem;
 }
+.bar-wrapper {
+    /* border: 1px solid red; */
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
 
-.container .base {
+.bar-wrapper b {
+    width: 5rem;
+    display: block;
+    /* margin-left: -25px; */
+    /* left: 76%; */
+    font-weight: bold;
+    font-size: x-large;
+    /* position: absolute; */
+    /* top: 0; */
+    text-align: right;
+    /* transition: .8s; */
+}
+.base {
     border-radius: 3000px;
     overflow: hidden;
     height: .8rem;
-    width: 100%;
+    /* width: 100%; */
+    flex: 1;
     background: #eee;
     
 }
 
-.container .bar {
+.bar {
     width: 76%;
     height: 100%;
     background: limegreen;
     flex: 1;
     transition: .8s;
+}
+
+.legend {
+    font-weight: bold;
+    font-size: x-large;
+    margin-bottom: 1rem;
 }
