--- a/components/Progress/Progress.module.css
+++ b/components/Progress/Progress.module.css
@@ -8,6 +8,16 @@
     /* padding-top: 2.8rem; */
     /* border: 1px solid white; */
 }
+.containerSmall {
+    display: flex;
+    max-width: 180px;
+    min-width: 60px;
+    width: 100%;
+    flex-direction: column;
+    position: relative;
+    /* padding-top: 2.8rem; */
+    /* border: 1px solid white; */
+}
 
 
 
@@ -48,11 +58,19 @@
     background: #eee;
     
 }
+.baseSmall {
+    border-radius: 3000px;
+    overflow: hidden;
+    height: .45rem;
+    /* width: 100%; */
+    flex: 1;
+    background: #eee;
+    
+}
 
 .bar {
     width: 76%;
     height: 100%;
-    background: limegreen;
     flex: 1;
     transition: .8s;
 }
@@ -61,4 +79,9 @@
     font-weight: bold;
     font-size: x-large;
     margin-bottom: 1rem;
+}
+.legendSmall {
+    font-weight: bold;
+    font-size: 1rem;
+    margin-bottom: 0;
 }
